--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "natural": "^8.1.0",
     "openai": "^6.9.1",
     "swagger-jsdoc": "^6.2.8",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/multer": "^2.0.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.11",
