--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsx src/server.ts",
+    "start:prod": "node dist/src/server.js",
     "server": "tsx src/server.ts",
     "build": "tsc",
     "dev": " npx kill-port 3005 &&tsx watch src/server.ts",
